--- a/index.html
+++ b/index.html
@@ -9,73 +9,82 @@
 <body>
 	<div class="all_cards">
 		<div class="card size1 child_card">
-			<div class="info">
-				<div class="card_name">синяя <span>карта</span></div>
-				<h2>Детский <span>мега+</span></h2>
-				<p class="card_description">
-					Возможность ежедневного посещения бассейна ребенком. Включая выходные и другие праздники
-				</p>
-			</div>
-			<div class="card_buy">
-				<button>
-					<span>Купить</span>
-				</button>
-			</div>
-			<div class="card_price">
-				<span>4.000&#8372;</span>
+			<div class="content">
+				<div class="info">
+					<div class="card_name">синяя <span>карта</span></div>
+					<h2>Детский <span>мега+</span></h2>
+					<p class="card_description">
+						Возможность ежедневного посещения бассейна ребенком. Включая выходные и другие праздники
+					</p>
+				</div>
+				<div class="card_buy">
+					<button>
+						<span>Купить</span>
+					</button>
+				</div>
+				<div class="card_price">
+					<span>4.000&#8372;</span>
+				</div>
 			</div>
 		</div>
 
 		<div class="card size1 basic_sport">
-			<div class="info">
-				<div class="card_name">лиловая <span>карта</span></div>
-				<h2>Базовый <span>спорт</span></h2>
-				<p class="card_description">
-					Все спортивные программы рекреационного центра в одном абонементном пакете. Верните себе молодость!
-				</p>
-			</div>
-			<div class="card_buy">
-				<button>
-					<span>Купить</span>
-				</button>
-			</div>
-			<div class="card_price">
-				<span>4.000&#8372;</span>
+			<div class="content">
+				<div class="info">
+					<div class="card_name">лиловая <span>карта</span></div>
+					<h2>Базовый <span>спорт</span></h2>
+					<p class="card_description">
+						Все спортивные программы рекреационного центра в одном абонементном пакете. Верните себе молодость!
+					</p>
+				</div>
+				<div class="card_buy">
+					<button>
+						<span>Купить</span>
+					</button>
+				</div>
+				<div class="card_price">
+					<span>4.000&#8372;</span>
+				</div>
 			</div>
 		</div>
 
 		<div class="card size2 full_immertion">
-			<div class="info">
-				<div class="card_name">морская <span>карта</span></div>
-				<h2>Полное погружение <span></span></h2>
-				<p class="card_description">
-					Полная программа занятий в рекреационно-оздоровительномцентре. Включает спорт-курс
-				</p>
-			</div>
-			<div class="card_buy">
-				<button>
-					<span>Купить</span>
-				</button>
-			</div>
-			<div class="card_price">
-				<span>8.000&#8372;</span>
+			<div class="content">
+				<div class="info">
+					<div class="card_name">морская <span>карта</span></div>
+					<h2>Полное погружение <span></span></h2>
+					<p class="card_description">
+						Полная программа занятий в рекреационно-оздоровительномцентре. Включает спорт-курс
+					</p>
+				</div>
+				<div class="card_buy">
+					<button>
+						<span>Купить</span>
+					</button>
+				</div>
+				<div class="card_price">
+					<span>8.000&#8372;</span>
+				</div>
 			</div>
 		</div>
+
 		<div class="card size2 aqua_yoga">
-			<div class="info">
-				<div class="card_name">светлая <span>карта</span></div>
-				<h2><span>аква-йога</span></h2>
-				<p class="card_description">
-					Двухмесячный курс по аква-йоге. Древние восточныепрактики в современном мире
-				</p>
-			</div>
-			<div class="card_buy">
-				<button>
-					<span>Купить</span>
-				</button>
-			</div>
-			<div class="card_price">
-				<span>4.000&#8372;</span>
+			<div class="content">
+				<div class="info">
+					<div class="card_name">светлая <span>карта</span></div>
+					<h2><span>аква-йога</span></h2>
+					<p class="card_description">
+						Двухмесячный курс по аква-йоге. Древние восточныепрактики в современном мире
+					</p>
+				</div>
+				<div class="card_buy">
+					<button>
+						<span>Купить</span>
+					</button>
+				</div>
+				<div class="card_price">
+					<span>4.000&#8372;</span>
+				</div>
 			</div>
 		</div>
 	</div>
