header is ready

--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-	<div class="wraper">
-		<div class="nav">
-			<div class="logo"></div>
-			<menu></menu>
-		</div>
+	<div class="wrapper">
+		<header>
+			<div class="content">
+				<a class="logo" href="/">
+					<img src="images/logo.jpg" alt="">
+				</a>
+				<nav class="menu">
+					<a href="#">о центре</a>
+					<a href="#">карты и расписание</a>
+					<a href="#">тренеры</a>
+					<a href="#">галерея</a>
+					<a href="#">новости</a>
+					<a href="#">контакты</a>
+				</nav>
+			</div>
+		</header>
 
-		<section class="all_cards"></section>
+		<section class="all_cards">
+			
+		</section>
 
 		<section class="motivation"></section>
 
