add ALL CARDS and MOTIVATION

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<a class="logo" href="/">
 					<img src="images/logo.jpg" alt="">
 				</a>
-				<nav class="menu">
+				<nav class="menu text_upper">
 					<a href="#">о центре</a>
 					<a href="#">карты и расписание</a>
 					<a href="#">тренеры</a>
@@ -24,12 +24,105 @@
 			</div>
 		</header>
 
-		<section class="all_cards">
+		<!-- <section class="all_cards">
 			
+		</section> -->
+		<section class="all_cards">
+			<div class="card size1 child_card">
+				<div class="card_content">
+					<div class="info">
+						<div class="card_name text_upper">синяя <span>карта</span></div>
+						<h2>Детский <span class="text_upper">мега+</span></h2>
+						<p class="card_description">
+							Возможность ежедневного посещения бассейна ребенком. Включая выходные и другие праздники
+						</p>
+					</div>
+					<div class="btn">
+						<button>
+							<span class="text_upper">Купить</span>
+						</button>
+					</div>
+					<div class="card_price">
+						<span>4.000&#8372;</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="card size1 basic_sport">
+				<div class="card_content">
+					<div class="info">
+						<div class="card_name text_upper">лиловая <span>карта</span></div>
+						<h2>Базовый <span class="text_upper">спорт</span></h2>
+						<p class="card_description">
+							Все спортивные программы рекреационного центра в одном абонементном пакете. Верните себе молодость!
+						</p>
+					</div>
+					<div class="btn">
+						<button>
+							<span class="text_upper">Купить</span>
+						</button>
+					</div>
+					<div class="card_price">
+						<span>4.000&#8372;</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="card size2 full_immertion">
+				<div class="card_content">
+					<div class="info">
+						<div class="card_name text_upper">морская <span >карта</span></div>
+						<h2>Полное погружение <span></span></h2>
+						<p class="card_description">
+							Полная программа занятий в рекреационно-оздоровительномцентре. Включает спорт-курс
+						</p>
+					</div>
+					<div class="btn">
+						<button>
+							<span class="text_upper">Купить</span>
+						</button>
+					</div>
+					<div class="card_price">
+						<span>8.000&#8372;</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="card size2 aqua_yoga">
+				<div class="card_content">
+					<div class="info">
+						<div class="card_name text_upper">светлая <span>карта</span></div>
+						<h2><span class="text_upper">аква-йога</span></h2>
+						<p class="card_description">
+							Двухмесячный курс по аква-йоге. Древние восточныепрактики в современном мире
+						</p>
+					</div>
+					<div class="btn">
+						<button>
+							<span class="text_upper">Купить</span>
+						</button>
+					</div>
+					<div class="card_price">
+						<span>4.000&#8372;</span>
+					</div>
+				</div>
+			</div>
 		</section>
 
-		<section class="motivation"></section>
-
+<!-- SECTION MOTIVATION -->
+		<section class="motivation">
+			<div class="motiv_info">
+				<p class="motiv_intro">Всего одно занятие в нашем бассейне</p>
+				<h2><span class="text_upper">сжигает три кило лишнего веса!</span></h2>
+				<p class="motiv_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+				<div class="btn">
+					<button>
+						<span class="text_upper">Узнать больше</span>
+					</button>
+				</div>
+			</div>
+		</section>
+ 
 		<section class="timetable"></section>
 
 		<section class="gift"></section>
