corect margins and paddings in MOTIVATION

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
 			</div>
 		</section>
  
+<!-- SECTION TIMETABLE -->
 		<section class="timetable"></section>
-
+			<h2><span class="text_upper">расписание занятий</span></h2>
 		<section class="gift"></section>
 
 		<footer></footer>
