add timetable for one card

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="card size1 child_card">
 				<div class="card_content">
 					<div class="info">
-						<div class="card_name text_upper">синяя <span>карта</span></div>
+						<div class="card_name text_upper"><span>синяя <span class="lett_spase0">карта</span></span></div>
 						<h2>Детский <span class="text_upper">мега+</span></h2>
 						<p class="card_description">
 							Возможность ежедневного посещения бассейна ребенком. Включая выходные и другие праздники
@@ -51,7 +51,7 @@
 			<div class="card size1 basic_sport">
 				<div class="card_content">
 					<div class="info">
-						<div class="card_name text_upper">лиловая <span>карта</span></div>
+						<div class="card_name text_upper"><span>лиловая <span class="lett_spase0">карта</span></span></div>
 						<h2>Базовый <span class="text_upper">спорт</span></h2>
 						<p class="card_description">
 							Все спортивные программы рекреационного центра в одном абонементном пакете. Верните себе молодость!
@@ -71,7 +71,7 @@
 			<div class="card size2 full_immertion">
 				<div class="card_content">
 					<div class="info">
-						<div class="card_name text_upper">морская <span >карта</span></div>
+						<div class="card_name text_upper"><span>морская <span class="lett_spase0">карта</span></span></div>
 						<h2>Полное погружение <span></span></h2>
 						<p class="card_description">
 							Полная программа занятий в рекреационно-оздоровительномцентре. Включает спорт-курс
@@ -91,7 +91,7 @@
 			<div class="card size2 aqua_yoga">
 				<div class="card_content">
 					<div class="info">
-						<div class="card_name text_upper">светлая <span>карта</span></div>
+						<div class="card_name text_upper"><span>светлая <span class="lett_spase0">карта</span></span></div>
 						<h2><span class="text_upper">аква-йога</span></h2>
 						<p class="card_description">
 							Двухмесячный курс по аква-йоге. Древние восточныепрактики в современном мире
@@ -124,8 +124,144 @@
 		</section>
  
 <!-- SECTION TIMETABLE -->
-		<section class="timetable"></section>
+		<section class="timetable">
 			<h2><span class="text_upper">расписание занятий</span></h2>
+
+			<div class="timing_cards">
+
+				<div class="timetable_for_card">
+					<div class="card size3 full_immertion">
+						<div class="card_content">
+							<div class="card_name text_upper"><span>морская <span class="lett_spase0">карта</span></span></div>
+							<h2>Полное погружение <span></span></h2>
+						</div>
+					</div>
+		
+					<div class="coach_time">
+						<div class="time">
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">9:00</p>
+									<p class="to">-10:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">10:00</p>
+									<p class="to">-11:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">11:00</p>
+									<p class="to">-12:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">12:00</p>
+									<p class="to">-13:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">13:00</p>
+									<p class="to">-14:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">14:00</p>
+									<p class="to">-15:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">15:00</p>
+									<p class="to">-16:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">16:00</p>
+									<p class="to">-17:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">17:00</p>
+									<p class="to">-18:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">18:00</p>
+									<p class="to">-19:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">19:00</p>
+									<p class="to">-20:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">20:00</p>
+									<p class="to">-21:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">21:00</p>
+									<p class="to">-22:00</p>
+								</div>
+							</div>
+						</div>
+						<div class="coach">
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+						</div>
+						<div class="coaches_timing">
+							<div class="btn coach_timing"><span>Михаил Лоботюк</span></div>
+						</div>
+					</div>
+				</div>
+				<!-- <div class="">
+					<div class="card size3"></div>
+					<div class="coach_time">
+						<div class="hours"></div>
+						<div class="coach"></div>
+					</div>
+				</div>
+				<div class="">
+					<div class="card size3"></div>
+					<div class="coach_time">
+						<div class="hours"></div>
+						<div class="coach"></div>
+					</div>
+				</div>
+				<div class="">
+					<div class="card size3"></div>
+					<div class="coach_time">
+						<div class="hours"></div>
+						<div class="coach"></div>
+					</div>
+				</div> -->
+			</div>
+		</section>
+
 		<section class="gift"></section>
 
 		<footer></footer>
