add timtable for four cards, but don't positioned personal sticks for coaches

--- a/index.html
+++ b/index.html
@@ -229,36 +229,348 @@
 							<div class="coaches"></div>
 							<div class="coaches"></div>
 							<div class="coaches"></div>
+							<div class="coaches"></div>	
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+						</div>
+						<div class="coaches_timing">
+							<div class="btn coach_timing coach_id_1"><span>Михаил Лоботюк</span></div>
+						</div>
+					</div>
+				</div>
+
+				<div class="timetable_for_card">
+					<div class="card size3 child_card">
+						<div class="card_content">
+							<div class="card_name text_upper"><span>синяя <span class="lett_spase0">карта</span></span></div>
+							<h2>Детский <span>Мега+</span></h2>
+						</div>
+					</div>
+		
+					<div class="coach_time">
+						<div class="time">
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">9:00</p>
+									<p class="to">-10:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">10:00</p>
+									<p class="to">-11:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">11:00</p>
+									<p class="to">-12:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">12:00</p>
+									<p class="to">-13:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">13:00</p>
+									<p class="to">-14:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">14:00</p>
+									<p class="to">-15:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">15:00</p>
+									<p class="to">-16:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">16:00</p>
+									<p class="to">-17:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">17:00</p>
+									<p class="to">-18:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">18:00</p>
+									<p class="to">-19:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">19:00</p>
+									<p class="to">-20:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">20:00</p>
+									<p class="to">-21:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">21:00</p>
+									<p class="to">-22:00</p>
+								</div>
+							</div>
+						</div>
+						<div class="coach">
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
 							<div class="coaches"></div>
 							<div class="coaches"></div>
 							<div class="coaches"></div>
 						</div>
 						<div class="coaches_timing">
-							<div class="btn coach_timing"><span>Михаил Лоботюк</span></div>
+							<div class="btn coach_timing coach_id_2"><span>Ольга Соколова</span></div>
+							<div class="btn coach_timing coach_id_3"><span>Андрей Островский</span></div>
 						</div>
 					</div>
 				</div>
-				<!-- <div class="">
-					<div class="card size3"></div>
+				
+				<div class="timetable_for_card">
+					<div class="card size3 basic_sport">
+						<div class="card_content">
+							<div class="card_name text_upper"><span>лиловая <span class="lett_spase0">карта</span></span></div>
+							<h2>Базовый <span>спорт</span></h2>
+						</div>
+					</div>
+		
 					<div class="coach_time">
-						<div class="hours"></div>
-						<div class="coach"></div>
+						<div class="time">
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">9:00</p>
+									<p class="to">-10:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">10:00</p>
+									<p class="to">-11:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">11:00</p>
+									<p class="to">-12:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">12:00</p>
+									<p class="to">-13:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">13:00</p>
+									<p class="to">-14:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">14:00</p>
+									<p class="to">-15:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">15:00</p>
+									<p class="to">-16:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">16:00</p>
+									<p class="to">-17:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">17:00</p>
+									<p class="to">-18:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">18:00</p>
+									<p class="to">-19:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">19:00</p>
+									<p class="to">-20:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">20:00</p>
+									<p class="to">-21:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">21:00</p>
+									<p class="to">-22:00</p>
+								</div>
+							</div>
+						</div>
+						<div class="coach">
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+						</div>
+						<div class="coaches_timing">
+							<div class="btn coach_timing coach_id_4"><span>Татьяна Симанович</span></div>
+							<div class="btn coach_timing coach_id_5"><span>Валентин Зорин</span></div>
+							<div class="btn coach_timing coach_id_6"><span>Давид Мшвилдадзе</span></div>
+						</div>
 					</div>
 				</div>
-				<div class="">
-					<div class="card size3"></div>
+
+				<div class="timetable_for_card">
+					<div class="card size3 aqua_yoga">
+						<div class="card_content">
+							<div class="card_name text_upper"><span>светлая <span class="lett_spase0">карта</span></span></div>
+							<h2><span>Аква-йога</span></h2>
+						</div>
+					</div>
+		
 					<div class="coach_time">
-						<div class="hours"></div>
-						<div class="coach"></div>
+						<div class="time">
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">9:00</p>
+									<p class="to">-10:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">10:00</p>
+									<p class="to">-11:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">11:00</p>
+									<p class="to">-12:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">12:00</p>
+									<p class="to">-13:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">13:00</p>
+									<p class="to">-14:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">14:00</p>
+									<p class="to">-15:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">15:00</p>
+									<p class="to">-16:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">16:00</p>
+									<p class="to">-17:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">17:00</p>
+									<p class="to">-18:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">18:00</p>
+									<p class="to">-19:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">19:00</p>
+									<p class="to">-20:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">20:00</p>
+									<p class="to">-21:00</p>
+								</div>
+							</div>
+							<div class="hour">
+								<div class="numbers">
+									<p class="from">21:00</p>
+									<p class="to">-22:00</p>
+								</div>
+							</div>
+						</div>
+						<div class="coach">
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+						</div>
+						<div class="coaches_timing">
+							<div class="btn coach_timing coach_id_7"><span>Альберт Леонов</span></div>
+						</div>
 					</div>
 				</div>
-				<div class="">
-					<div class="card size3"></div>
-					<div class="coach_time">
-						<div class="hours"></div>
-						<div class="coach"></div>
-					</div>
-				</div> -->
 			</div>
 		</section>
 
