--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 					<div class="card size3 child_card">
 						<div class="card_content">
 							<div class="card_name text_upper"><span>синяя <span class="lett_spase0">карта</span></span></div>
-							<h2>Детский <span>Мега+</span></h2>
+							<h2>Детский <span class="text_upper">Мега+</span></h2>
 						</div>
 					</div>
 		
@@ -329,7 +329,12 @@
 							</div>
 						</div>
 						<div class="coach">
-							<div class="coaches"></div>
+							<div class="coaches stick">
+								<div class="coaches_timing">
+									<div class="btn coach_timing coach_id_2"><span>Ольга Соколова</span></div>
+									<div class="btn coach_timing coach_id_3"><span>Андрей Островский</span></div>
+								</div>
+							</div>
 							<div class="coaches"></div>
 							<div class="coaches"></div>
 							<div class="coaches"></div>
@@ -343,10 +348,7 @@
 							<div class="coaches"></div>
 							<div class="coaches"></div>
 						</div>
-						<div class="coaches_timing">
-							<div class="btn coach_timing coach_id_2"><span>Ольга Соколова</span></div>
-							<div class="btn coach_timing coach_id_3"><span>Андрей Островский</span></div>
-						</div>
+						
 					</div>
 				</div>
 				
@@ -354,7 +356,7 @@
 					<div class="card size3 basic_sport">
 						<div class="card_content">
 							<div class="card_name text_upper"><span>лиловая <span class="lett_spase0">карта</span></span></div>
-							<h2>Базовый <span>спорт</span></h2>
+							<h2>Базовый <span class="text_upper">спорт</span></h2>
 						</div>
 					</div>
 		
@@ -466,7 +468,7 @@
 					<div class="card size3 aqua_yoga">
 						<div class="card_content">
 							<div class="card_name text_upper"><span>светлая <span class="lett_spase0">карта</span></span></div>
-							<h2><span>Аква-йога</span></h2>
+							<h2><span class="text_upper">Аква-йога</span></h2>
 						</div>
 					</div>
 		
@@ -574,8 +576,24 @@
 			</div>
 		</section>
 
-		<section class="gift"></section>
+<!-- GIFT -->
+		<section class="gift">
+			<div class="gift_info">
+				<h2><span class="text_upper">Шапка для плавания в подарок</span></h2>
+				<p class="gift_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
+				<div class="btn">
+					<button>
+						<span class="text_upper">Узнать больше</span>
+					</button>
+				</div>
 
+			</div>
+			<div class="gift_img">
+				<img src="images/hat.jpg" alt="">
+			</div>
+		</section>
+
+<!-- FOOTER -->
 		<footer></footer>
 	</div>
 </body>
