--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Abonement All Cards</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -594,7 +595,33 @@
 		</section>
 
 <!-- FOOTER -->
-		<footer></footer>
+		<footer>
+			<div class="footer_info">
+				<div class="tel">
+					<i class="fas fa-phone fa-1x"></i>
+					<span> 0 44 550-63-33</span>
+				</div>
+				<div class="copywrite">
+					<p>	&copy; Петрохолдинг 2016. Все права защищены.</p>
+					<a href="#">Контактная информация</a>
+				</div>
+				<div class="social">
+					<div class="photo">
+						<i class="fa fa-camera-retro fa-1x"></i>
+					</div>
+					<div class="vkontact">
+						<i class="fas fa-bold fa-1x"></i>
+					</div>
+					<div class="facebook">
+						<i class="fab fa-facebook-f fa-1x"></i>
+					</div>
+				</div>
+			</div>
+			<div class="about_site">
+				<p>Дизайн от <a href="#">Бюро идей</a></p>
+				<p><a href="#">Информация о сайте</a></p>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
