fix bags after code revue from Alex -- footer, nav, motiv

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
+
 <body>
 	<div class="wrapper">
 		<header>
@@ -25,21 +26,20 @@
 			</div>
 		</header>
 
-		<!-- <section class="all_cards">
-			
-		</section> -->
 		<section class="all_cards">
 			<div class="card size1 child_card">
 				<div class="card_content">
 					<div class="info">
-						<div class="card_name text_upper"><span>синяя <span class="lett_spase0">карта</span></span></div>
+						<div class="card_name text_upper">
+							<span>синяя <span class="lett_spase0">карта</span></span>
+						</div>
 						<h2>Детский <span class="text_upper">мега+</span></h2>
 						<p class="card_description">
 							Возможность ежедневного посещения бассейна ребенком. Включая выходные и другие праздники
 						</p>
 					</div>
 					<div class="btn">
-						<button>
+						<button type="button">
 							<span class="text_upper">Купить</span>
 						</button>
 					</div>
@@ -52,14 +52,16 @@
 			<div class="card size1 basic_sport">
 				<div class="card_content">
 					<div class="info">
-						<div class="card_name text_upper"><span>лиловая <span class="lett_spase0">карта</span></span></div>
+						<div class="card_name text_upper">
+							<span>лиловая <span class="lett_spase0">карта</span></span>
+						</div>
 						<h2>Базовый <span class="text_upper">спорт</span></h2>
 						<p class="card_description">
 							Все спортивные программы рекреационного центра в одном абонементном пакете. Верните себе молодость!
 						</p>
 					</div>
 					<div class="btn">
-						<button>
+						<button type="button">
 							<span class="text_upper">Купить</span>
 						</button>
 					</div>
@@ -72,14 +74,16 @@
 			<div class="card size2 full_immertion">
 				<div class="card_content">
 					<div class="info">
-						<div class="card_name text_upper"><span>морская <span class="lett_spase0">карта</span></span></div>
+						<div class="card_name text_upper">
+							<span>морская <span class="lett_spase0">карта</span></span>
+						</div>
 						<h2>Полное погружение <span></span></h2>
 						<p class="card_description">
 							Полная программа занятий в рекреационно-оздоровительномцентре. Включает спорт-курс
 						</p>
 					</div>
 					<div class="btn">
-						<button>
+						<button type="button">
 							<span class="text_upper">Купить</span>
 						</button>
 					</div>
@@ -92,14 +96,16 @@
 			<div class="card size2 aqua_yoga">
 				<div class="card_content">
 					<div class="info">
-						<div class="card_name text_upper"><span>светлая <span class="lett_spase0">карта</span></span></div>
+						<div class="card_name text_upper">
+							<span>светлая <span class="lett_spase0">карта</span></span>
+						</div>
 						<h2><span class="text_upper">аква-йога</span></h2>
 						<p class="card_description">
 							Двухмесячный курс по аква-йоге. Древние восточныепрактики в современном мире
 						</p>
 					</div>
 					<div class="btn">
-						<button>
+						<button type="button">
 							<span class="text_upper">Купить</span>
 						</button>
 					</div>
@@ -110,30 +116,47 @@
 			</div>
 		</section>
 
-<!-- SECTION MOTIVATION -->
 		<section class="motivation">
 			<div class="motiv_info">
 				<p class="motiv_intro">Всего одно занятие в нашем бассейне</p>
 				<h2><span class="text_upper">сжигает три кило лишнего веса!</span></h2>
 				<p class="motiv_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 				<div class="btn">
-					<button>
+					<button type="button">
 						<span class="text_upper">Узнать больше</span>
 					</button>
 				</div>
 			</div>
+			<div class="motiv_switch">
+				<div class="switch_items_container">
+					<div class="switch_items">
+						<div class="switch_item">
+							<a href="#"></a>
+						</div>
+						<div class="switch_item">
+							<a href="#"></a>
+						</div>
+						<div class="switch_item">
+							<a href="#"></a>
+						</div>
+						<div class="switch_item">
+							<a href="#"></a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
  
-<!-- SECTION TIMETABLE -->
 		<section class="timetable">
 			<h2><span class="text_upper">расписание занятий</span></h2>
 
 			<div class="timing_cards">
-
 				<div class="timetable_for_card">
 					<div class="card size3 full_immertion">
 						<div class="card_content">
-							<div class="card_name text_upper"><span>морская <span class="lett_spase0">карта</span></span></div>
+							<div class="card_name text_upper">
+								<span>морская <span class="lett_spase0">карта</span></span>
+							</div>
 							<h2>Полное погружение <span></span></h2>
 						</div>
 					</div>
@@ -235,7 +258,9 @@
 							<div class="coaches"></div>
 						</div>
 						<div class="coaches_timing">
-							<div class="btn coach_timing coach_id_1"><span>Михаил Лоботюк</span></div>
+							<div class="btn coach_timing coach_id_1">
+								<span>Михаил Лоботюк</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -243,7 +268,9 @@
 				<div class="timetable_for_card">
 					<div class="card size3 child_card">
 						<div class="card_content">
-							<div class="card_name text_upper"><span>синяя <span class="lett_spase0">карта</span></span></div>
+							<div class="card_name text_upper">
+								<span>синяя <span class="lett_spase0">карта</span></span>
+							</div>
 							<h2>Детский <span class="text_upper">Мега+</span></h2>
 						</div>
 					</div>
@@ -332,8 +359,12 @@
 						<div class="coach">
 							<div class="coaches stick">
 								<div class="coaches_timing">
-									<div class="btn coach_timing coach_id_2"><span>Ольга Соколова</span></div>
-									<div class="btn coach_timing coach_id_3"><span>Андрей Островский</span></div>
+									<div class="btn coach_timing coach_id_2">
+										<span>Ольга Соколова</span>
+									</div>
+									<div class="btn coach_timing coach_id_3">
+										<span>Андрей Островский</span>
+									</div>
 								</div>
 							</div>
 							<div class="coaches"></div>
@@ -356,7 +387,9 @@
 				<div class="timetable_for_card">
 					<div class="card size3 basic_sport">
 						<div class="card_content">
-							<div class="card_name text_upper"><span>лиловая <span class="lett_spase0">карта</span></span></div>
+							<div class="card_name text_upper">
+								<span>лиловая <span class="lett_spase0">карта</span></span>
+							</div>
 							<h2>Базовый <span class="text_upper">спорт</span></h2>
 						</div>
 					</div>
@@ -458,9 +491,15 @@
 							<div class="coaches"></div>
 						</div>
 						<div class="coaches_timing">
-							<div class="btn coach_timing coach_id_4"><span>Татьяна Симанович</span></div>
-							<div class="btn coach_timing coach_id_5"><span>Валентин Зорин</span></div>
-							<div class="btn coach_timing coach_id_6"><span>Давид Мшвилдадзе</span></div>
+							<div class="btn coach_timing coach_id_4">
+								<span>Татьяна Симанович</span>
+							</div>
+							<div class="btn coach_timing coach_id_5">
+								<span>Валентин Зорин</span>
+							</div>
+							<div class="btn coach_timing coach_id_6">
+								<span>Давид Мшвилдадзе</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -468,7 +507,9 @@
 				<div class="timetable_for_card">
 					<div class="card size3 aqua_yoga">
 						<div class="card_content">
-							<div class="card_name text_upper"><span>светлая <span class="lett_spase0">карта</span></span></div>
+							<div class="card_name text_upper">
+								<span>светлая <span class="lett_spase0">карта</span></span>
+							</div>
 							<h2><span class="text_upper">Аква-йога</span></h2>
 						</div>
 					</div>
@@ -570,36 +611,35 @@
 							<div class="coaches"></div>
 						</div>
 						<div class="coaches_timing">
-							<div class="btn coach_timing coach_id_7"><span>Альберт Леонов</span></div>
+							<div class="btn coach_timing coach_id_7">
+								<span>Альберт Леонов</span>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
-<!-- GIFT -->
 		<section class="gift">
 			<div class="gift_info">
 				<h2><span class="text_upper">Шапка для плавания в подарок</span></h2>
 				<p class="gift_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
 				<div class="btn">
-					<button>
+					<button type="button">
 						<span class="text_upper">Узнать больше</span>
 					</button>
 				</div>
-
 			</div>
 			<div class="gift_img">
 				<img src="images/hat.jpg" alt="">
 			</div>
 		</section>
 
-<!-- FOOTER -->
 		<footer>
 			<div class="footer_info">
 				<div class="tel">
 					<i class="fas fa-phone fa-1x"></i>
-					<span> 0 44 550-63-33</span>
+					<a href="tel: +380445506333"><span>0 44 550-63-33</span></a>
 				</div>
 				<div class="copywrite">
 					<p>	&copy; Петрохолдинг 2016. Все права защищены.</p>
@@ -619,7 +659,7 @@
 			</div>
 			<div class="about_site">
 				<p>Дизайн от <a href="#">Бюро идей</a></p>
-				<p><a href="#">Информация о сайте</a></p>
+				<a href="#">Информация о сайте</a>
 			</div>
 		</footer>
 	</div>
