fix coaches sticks

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>Abonement All Cards</title>
@@ -242,8 +243,13 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="coach">
-							<div class="coaches"></div>
+							<div class="coaches">
+								<div class="btn coach_timing coach_id_1">
+									<span>Михаил Лоботюк</span>
+								</div>
+							</div>
 							<div class="coaches"></div>
 							<div class="coaches"></div>
 							<div class="coaches"></div>
@@ -256,11 +262,6 @@
 							<div class="coaches"></div>	
 							<div class="coaches"></div>
 							<div class="coaches"></div>
-						</div>
-						<div class="coaches_timing">
-							<div class="btn coach_timing coach_id_1">
-								<span>Михаил Лоботюк</span>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -356,8 +357,9 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="coach">
-							<div class="coaches stick">
+							<div class="coaches">
 								<div class="coaches_timing">
 									<div class="btn coach_timing coach_id_2">
 										<span>Ольга Соколова</span>
@@ -475,31 +477,33 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="coach">
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-						</div>
-						<div class="coaches_timing">
-							<div class="btn coach_timing coach_id_4">
-								<span>Татьяна Симанович</span>
+							<div class="coaches">
+								<div class="coaches_timing">
+									<div class="btn coach_timing coach_id_4">
+										<span>Татьяна Симанович</span>
+									</div>
+									<div class="btn coach_timing coach_id_5">
+										<span>Валентин Зорин</span>
+									</div>
+									<div class="btn coach_timing coach_id_6">
+										<span>Давид Мшвилдадзе</span>
+									</div>
+								</div>
 							</div>
-							<div class="btn coach_timing coach_id_5">
-								<span>Валентин Зорин</span>
-							</div>
-							<div class="btn coach_timing coach_id_6">
-								<span>Давид Мшвилдадзе</span>
-							</div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
 						</div>
 					</div>
 				</div>
@@ -595,25 +599,27 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="coach">
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-							<div class="coaches"></div>
-						</div>
-						<div class="coaches_timing">
-							<div class="btn coach_timing coach_id_7">
-								<span>Альберт Леонов</span>
+							<div class="coaches">
+								<div class="coaches_timing">
+									<div class="btn coach_timing coach_id_7">
+										<span>Альберт Леонов</span>
+									</div>
+								</div>
 							</div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
+							<div class="coaches"></div>
 						</div>
 					</div>
 				</div>
@@ -664,4 +670,5 @@
 		</footer>
 	</div>
 </body>
+
 </html>
