--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							Возможность ежедневного посещения бассейна ребенком. Включая выходные и другие праздники
 						</p>
 					</div>
-					<div class="btn">
+					<div class="btn buy">
 						<button type="button">
 							<span class="text_upper">Купить</span>
 						</button>
@@ -61,7 +61,7 @@
 							Все спортивные программы рекреационного центра в одном абонементном пакете. Верните себе молодость!
 						</p>
 					</div>
-					<div class="btn">
+					<div class="btn buy">
 						<button type="button">
 							<span class="text_upper">Купить</span>
 						</button>
@@ -83,7 +83,7 @@
 							Полная программа занятий в рекреационно-оздоровительномцентре. Включает спорт-курс
 						</p>
 					</div>
-					<div class="btn">
+					<div class="btn buy">
 						<button type="button">
 							<span class="text_upper">Купить</span>
 						</button>
@@ -105,7 +105,7 @@
 							Двухмесячный курс по аква-йоге. Древние восточныепрактики в современном мире
 						</p>
 					</div>
-					<div class="btn">
+					<div class="btn buy">
 						<button type="button">
 							<span class="text_upper">Купить</span>
 						</button>
